<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.firstapp.jarenas.com.myfirstapplication.LoginActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/welcome"
    android:id="@+id/welcome"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />


<TextView
    android:text="@string/user"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/lblUser"
    android:layout_below="@+id/welcome"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="33dp" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/user_placeholder"
    android:inputType="textPersonName"
    android:id="@+id/txtUser"
    android:layout_below="@+id/lblUser"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:width="33dp"
    />

<TextView android:text="@string/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/lblPassword"
    android:layout_marginTop="29dp"
    android:layout_below="@+id/txtUser"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />


<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/password_placeholder"
    android:id="@+id/txtPassword"
    android:inputType="textPassword"
    android:layout_below="@+id/lblPassword"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="forwardZoom"
    android:id="@+id/forwardZoom"
    android:onClick="forwardZoom"
    android:textAppearance="?android:attr/textAppearanceMediumInverse"
    android:layout_above="@+id/left"
    android:layout_centerHorizontal="true" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="left"
    android:id="@+id/left"
    android:onClick="left"
    android:textAppearance="?android:attr/textAppearanceMediumInverse"
    android:layout_above="@+id/fade"
    android:layout_centerHorizontal="true" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="fade"
    android:id="@+id/fade"
    android:onClick="fade"
    android:layout_above="@+id/byDefault"
    android:layout_alignLeft="@+id/left"
    android:layout_alignStart="@+id/left"
    android:textAppearance="?android:attr/textAppearanceMediumInverse" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="byDefault"
    android:id="@+id/byDefault"
    android:onClick="byDefault"
    android:textAppearance="?android:attr/textAppearanceMediumInverse"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />


</RelativeLayout>
